fixed vertical align

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,7 @@
 html, body, p, h1, h2, h3, h4 {
     font-family: 'Helvetica Neue', 'Open Sans', sans-serif;
     font-weight: 250;
+    color: white;
     /*font-size: 18px;*/
     /*font-weight: 300;*/
 }
@@ -35,6 +36,7 @@ body {
 }
 section {
     min-height: 100%;   
+    height: 100%;
     background-color: white;
     border-style: solid;
     border-left: none;
@@ -59,6 +61,7 @@ section#story {
     background-size: cover;
 }
 
+
 /* 
     Vertical alignments   
 ========================================================================== */
@@ -77,6 +80,7 @@ section#story {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+    width: 100%;
 }
 
 
